{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 31,
  "lineage": "6bad6005-efee-824e-ffbf-61979f0b3ea8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "manage-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727416877925:internet-gateway/igw-03b4b97135ec1cdfc",
            "id": "igw-03b4b97135ec1cdfc",
            "owner_id": "727416877925",
            "tags": {
              "Name": "manage-igw"
            },
            "tags_all": {
              "Name": "manage-igw"
            },
            "vpc_id": "vpc-03c604a53d781ad0a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.manage_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "manage-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727416877925:route-table/rtb-00be2776b42d775b1",
            "id": "rtb-00be2776b42d775b1",
            "owner_id": "727416877925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b4b97135ec1cdfc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "manage-rtb-public"
            },
            "tags_all": {
              "Name": "manage-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c604a53d781ad0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.manage-igw",
            "module.vpc.aws_vpc.manage_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach_public_sn_to_crtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b040daf8c3ef800a",
            "route_table_id": "rtb-00be2776b42d775b1",
            "subnet_id": "subnet-0cd0668559931bb85"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.manage-igw",
            "module.vpc.aws_route_table.manage-rtb-public",
            "module.vpc.aws_subnet.manage-subnet-public",
            "module.vpc.aws_vpc.manage_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727416877925:security-group/sg-07ae28322bb9dbca0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ae28322bb9dbca0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220131075250767300000001",
            "name_prefix": "terraform-",
            "owner_id": "727416877925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c604a53d781ad0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.manage_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "manage-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727416877925:subnet/subnet-063373642e5f7611f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063373642e5f7611f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727416877925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "manage-subnet-private"
            },
            "tags_all": {
              "Name": "manage-subnet-private"
            },
            "vpc_id": "vpc-03c604a53d781ad0a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.manage_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "manage-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727416877925:subnet/subnet-0cd0668559931bb85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd0668559931bb85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727416877925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "manage-subnet-public"
            },
            "tags_all": {
              "Name": "manage-subnet-public"
            },
            "vpc_id": "vpc-03c604a53d781ad0a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.manage_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "manage_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727416877925:vpc/vpc-03c604a53d781ad0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ee7c633911a4115",
            "default_route_table_id": "rtb-0676850a590aa9276",
            "default_security_group_id": "sg-0b5e84b7bead47f4d",
            "dhcp_options_id": "dopt-03ad7e4401fcaa374",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c604a53d781ad0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0676850a590aa9276",
            "owner_id": "727416877925",
            "tags": {
              "Name": "aaahcl_vpc"
            },
            "tags_all": {
              "Name": "aaahcl_vpc"
            }
          }
        }
      ]
    }
  ]
}